--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
+  <script src="js/wordart/rainbowWA.js"></script>
 </head>
 <body>
   <sp-heading>Choose WordArt Style</sp-heading>
